--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
 					<div class="fix-12-12 toCenter topmargin">
 						<h1 class="ae-2 left fromLeft">An Interactive Topic Modelling Representation</h1>
 						<p class="tiny opacity-6">Explanation of what is included in this section.</p>
-						<iframe></iframe>
+						<iframe src="assets/topic_modelling.html" class="ifameclass"></iframe>
 					</div>
 
 
