--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
 					</div>
 
 					<div class="fix-12-12 toCenter topmargin">
-						<p class="ae-3 fromLeft"><span class="opacity-8"></span>For the topic modelling itself we used an LDA algorithm, by using the <a href=”https://radimrehurek.com/gensim/”>gensim library</a>. We decided to create 4 topics for the whole collection of documents. Each topic is created with unsupervised learning, and is defined by a set of words, each with a weight. We named the four resulting topics as: 0. Respect the country, 1. Work and go vote, 2. People's greatness, and 3. National power and activity.</p>
+						<p class="ae-3 fromLeft"><span class="opacity-8">For the topic modelling itself we used an LDA algorithm, by using the <a href=”https://radimrehurek.com/gensim/”>gensim library</a>. We decided to create 4 topics for the whole collection of documents. Each topic is created with unsupervised learning, and is defined by a set of words, each with a weight. We named the four resulting topics as: 0. Respect the country, 1. Work and go vote, 2. People's greatness, and 3. National power and activity.</span></p>
 					</div>
 
 					<div class="fix-12-12 toCenter topmargin">
@@ -1005,19 +1005,17 @@
 					<div class="fix-12-12 toCenter topmargin">
 						<p class="tiny opacity-6">
 							We then searched for the best fit of topic to document. We found the following results:
-	<li class="col-12-12 center ae-5 fromCenter">Document 0 (Trump’s Inaugural Speech ??) <span class="opacity-8">Topic 3: National power and activity.</span></li>
-	<li class="col-12-12 center ae-5 fromCenter">Document 1 (??) <span class="opacity-8">Topic 0: Respect the Country</span></li>
-	<li class="col-12-12 center ae-5 fromCenter">Document 2 (??) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
-	<li class="col-12-12 center ae-5 fromCenter">Document 3 ( ??) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
-	<li class="col-12-12 center ae-5 fromCenter">Document 4 (??) <span class="opacity-8">Topic 0: Respect the Country</span></li>
-	<li class="col-12-12 center ae-5 fromCenter">Document 5 ( ??) <span class="opacity-8">Topic 2: People’s Greatness</span></li>
-	<li class="col-12-12 center ae-5 fromCenter">Document 6 ( ??) <span class="opacity-8">Topic 3: National power and activity.</span></li>
-</p>
+							<li class="col-12-12 center ae-5 fromCenter">Document 0 (Trump’s Inaugural Speech ??) <span class="opacity-8">Topic 3: National power and activity.</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 1 (??) <span class="opacity-8">Topic 0: Respect the Country</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 2 (??) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 3 ( ??) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 4 (??) <span class="opacity-8">Topic 0: Respect the Country</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 5 ( ??) <span class="opacity-8">Topic 2: People’s Greatness</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 6 ( ??) <span class="opacity-8">Topic 3: National power and activity.</span></li></p>
+						<p class="tiny opacity-6">In the last step, by using pyLDAvis from Gensim library we created an interactive representation of every topic with the corresponding words. Check it out below!</p>
 						<h1 class="ae-2 left fromLeft">An Interactive Topic Modelling Representation</h1>
-						<p class="tiny opacity-6">Explanation of what is included in this section.</p>
 						<iframe src="assets/topic_modelling.html" class="ifameclass"></iframe>
 					</div>
-
 
 					</div>
 
@@ -1189,7 +1187,22 @@
 				<div class="fix-12-12 topmargin">
 					<ul class="grid">
 						<li class="col-12-12 center ae-5 fromCenter">
-							<p class="ae-3 fromLeft"><span class="opacity-8"></span>Check out some the automatically generated RWP sentences and paragraphs. </p>
+							<p class="ae-3 fromLeft"><span class="opacity-8"></span>Check out some the automatically generated RWP sentences and paragraphs. Some of them verge on the non-sense. Just like many of the speeches we have analyzed!</p>
+						</li>
+						<li class="col-12-12 center ae-5 fromCenter">
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Look, Oh wow, that’s what are not as the league does not for empty talk about Russia? Please tell you, frankly.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">During my earthquake victims, period. Rules or Belief.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Bonuses, for everyone? How would like the mafia, and I did. They’ll persecute you. These are some of this before. Do you want people right.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Authoritarian, worrying, irresponsible, opportunistic, ineffective, unconscious: a normal country will achieve new national effort to the 100 yard dash. You know, I tell the women who lived in any European union. And frankly, but the friendship and we are taking back in front of the rights of our culture, education, infrastructure and your heads of Black Needles Military Academy, which was here, and commanders of the end their lives. They destroyed people, which is the country where in these sinister fakers then visited Israel, where you today, with people who struggle: here, sir. I had married him the way, every newscast is no Italians want what are victims of Omar. I did you can’t win. You know what we’ve defended other month. I will be there. St. John Paul Gazelka. Paul. Minnesota GOP Chairwoman, Jennifer Carnahan. She’s great. You’ll see." And what are studying the path. We will rediscover our great men of those that select the radical leftists got a port of recovery of dollars and the strongest economy in a strong, powerful, confident and they are a turnout the lungs of good are looking like it comes towards you, the history of our employers, who told me "It is one of food – and from Brasilia to an idea for the workers whom a building a meeting. But I visit so old, they have magic wands but doing. The last week.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Betrayed them, I want to Iraq, I represent is carrying out of one day … But I have the joy and other drugs and vetting.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">In Venezuela, these rules change now has spent trillions of their homes, lost their interests in Afghanistan for their job for him on the deficit-GDP ratio, the Gospel of the history in Italy that it happens is, Scott, it’s enraged the other for those who are proposing to do but we need decent people that make America great American made a year. This feels like the left, including thousands and help the most surreal criticism of allegiance to a change now joined tonight by the Italians. There was welcome.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Deputies, Ladies and decay. We’ve now going to happiness, as all over 60% since we have any troops. The one or rag, because I came from north to law enforcement. I’ll never seen before. We don’t care. He invested upon us.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">God!</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Woman. She said, "Finally, we’re going to our country. That’s the Virgin Mary and the Armed Forces will quote by the home will quote by one, the White House. The one that with the Piombino steel mills who suffer the no one Administration to cast out of the first say it.If this the wilderness, revolutionized industry, pioneered science, won that we can rent or from Milan, I don't know if they are many workers in office. Because today is controlled by quiet people. Thank you. This American flag. And you are those pollsters, of the defense of American workers and spesometro, profitometer and no Italian people taking it and I love law enforcement. I don’t even in a truck driver, a big favor. They’re great, so many ignored by European rules and tell you. It’s the number one of its deterrent capabilities to fulfill their municipalities. In 2017 alone, approximately 95 thousand euro folder he as a very simply, beyond this, if I get media and yet to meet, to a serious government, but within 10 million Italians to return from Turkey is sacred.Members of construction, beauty, the classroom, respect that my heart. In the vote. Point and leave. What about the course of their own to change course, and respect to follow us, I saw you remember that? Gee, I’m the first political life, the rich bleeding America is the league, an.<span class="opacity-8">As you fight." I greet the 2005 referendum, when I underline - a great hope. Rule with every day my nose." I am sorry. Now look up, and Mrs. Raquel Dodge, of the Italy to damage thanks to keep it. There’s nothing that includes environmental crimes.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Also a child has said that let me being here, sir. They want to say, "President." I can be the Italians. First of the republic.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">For 70 cents per day. The United States of applause to initiate our hearts, that.<span class="opacity-8"></span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">As you want to build this country, and especially concerned with drugs and things…I love you bring them home. We’ve rebuilt our family and instead of the government of birth. That was told me, your wife with you, they would finally get us very human soul to the Washington corruption. Opening, competent management, and Mrs. Raquel Dodge, of religious values which I lost millions of shopping in the vote because we have done more older.That must eat the preferred target your heads of others who fall apart, there is the border …" I go, other Italian. It was taken forward.</span></p>
+							<p class="ae-3 fromLeft examplespeech"><span class="opacity-8">Tyrannical father who still sleep, to understand, honestly, my son walked away from north to practice their jobs for two cases: if we all of Israel is available to me all these roots, we will try to be good. Wait until yesterday and engagement of insults. The word’s never before. But the offices, factories, from the last week of the same. These visits will not in Austria they made. They came from all the respect for assistance or Hungary, although only be a Matteo Renzi, Gentiloni, I take anywhere in with 3 million immigrants. I am touching the coffin of computers better than we’ve never seen in our country. For too often paid you very angry at instrumentalizing the hardest thing I thought which they destroyed people, not understand, it again and natural resources has come a safe, it’s both in the people - let us the speaker. I think like you’ve got to the judgment of the last ones – but must speak of the Senate. I don’t let him that we are interested , sovereign! With God's sake, to build. In the total vote, I want to win back the coming from bringing Renzi on top of Omar. Mr. Itamar Franco. In the 5 Stars and their interests first. And that’s right, according to fight against years for your president, I have to cut parliamentarians August is great. I get the.</span></p>
 						</li>
 					</ul>
 				</div>
