--- a/index.html
+++ b/index.html
@@ -297,6 +297,8 @@
 						<p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
 						<h1 class="ae-2 fromAbove margin-bottom-2">Our Tool</h1>
 					</div>
+					<ul class="grid">
+						<li class="textbuttons">
 					<div class="buttonContainer">
 						<button class="button black gradient ae-4"id="btn_1">Trump - Inauguration</button>
 						<button class="button black gradient ae-4"id="btn_2">Trump - Minnesota Rally</button>
@@ -306,23 +308,27 @@
 						<button class="button black gradient ae-4"id="btn_6">Bolsonaro - UN Speech </button>
 						<button class="button black gradient ae-4"id="btn_7">Bolsonaro - Defense Minister</button>
 					</div>
+				</li>
+					<li class="devicebuttons">
 					<div class="buttonContainer_ret">
-						<button class="button black gradient ae-4"id="metaph">Methaphor</button>
-						<button class="button black gradient ae-4"id="simile">Similitude</button>
-						<button class="button black gradient ae-4"id="thirdp">Third Person</button>
-						<button class="button black gradient ae-4"id="quotes">Quotes</button>
-						<button class="button black gradient ae-4"id="retquest">Rethorical Question</button>
-						<button class="button black gradient ae-4"id="nick">Nicknames</button>
-						<button class="button black gradient ae-4"id="vs">Contrast</button>
-						<button class="button black gradient ae-4"id="paradox">Paradox</button>
-						<button class="button black gradient ae-4"id="foul">Foul</button>
-						<button class="button black gradient ae-4"id="relig">Religion</button>
-						<button class="button black gradient ae-4"id="cores">Core Issue</button>
+						<button class="button  gradient ae-4 bmetaph"id="metaph">Methaphor</button>
+						<button class="button  gradient ae-4 bsimile"id="simile">Similitude</button>
+						<button class="button  gradient ae-4 bthirdp"id="thirdp">Third Person</button>
+						<button class="button  gradient ae-4 bquotes"id="quotes">Quotes</button>
+						<button class="button  gradient ae-4 bretquest"id="retquest">Rethorical Question</button>
+						<button class="button  gradient ae-4 bnick"id="nick">Nicknames</button>
+						<button class="button  gradient ae-4 bvs"id="vs">Contrast</button>
+						<button class="button  gradient ae-4 bparadox"id="paradox">Paradox</button>
+						<button class="button  gradient ae-4 bfoul"id="foul">Foul</button>
+						<button class="button  gradient ae-4 brelig"id="relig">Religion</button>
+						<button class="button  gradient ae-4 bcores"id="cores">Core Issue</button>
 					</div>
-					<div id="txt_1" class="text_corpus">
+				</li>
+					<li class="speechestext">
+						<div id="txt_1" class="text_corpus">
 						<h1>Trump - Inauguration</h1>
-
 					</div>
+
 					<div id="txt_2" class="text_corpus">
 						<h1>Trump - Minnesota Rally</h1>
 						<h2>10th October 2019</h2>
@@ -477,7 +483,8 @@
 					<div id="txt_7" class="text_corpus">
 						<h1>Bolsonaro - ? </h1>
 					</div>
-        </div>
+        </li>
+			</ul>
 
 				<div class="fix-12-12 toCenter topmargin">
 					<div class="fix-7-12">
