--- a/index.html
+++ b/index.html
@@ -744,12 +744,12 @@
 						</li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-5 fromLeft">
              <h3>Topic Modelling</h3>
-						 <div class="price ae-5"><a href="#topicmodelling"><img src="assets/img/topicmodelling.png" height="150"/></a></div>
+						 <div class="price ae-5"><a href="#topicmodelling"><img src="assets/img/distantreading/topicmodelling/topicmodelling.png" height="150"/></a></div>
              <p class="tiny opacity-6">What topics are the most prevalent in each populist and across them?</p>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-6 fromLeft">
              <h3>Sentiment Analysis</h3>
-						 <div class="price ae-5"><a href="#sentiment"><img src="assets/img/polarity_time_BOLSONARO1.png" height="150"/></a></div>
+						 <div class="price ae-5"><a href="#sentiment"><img src="assets/img/distantreading/sentimentanalysis/polarity_time_BOLSONARO1.png" height="150"/></a></div>
              <p class="tiny opacity-6">Do the speeches convey more positive or negative emotion?</p>
             </li>
           </ul>
@@ -1228,13 +1228,13 @@
 					<div class="fix-12-12 toCenter topmargin">
 						<p class="tiny opacity-6">
 							We then searched for the best fit of topic to document. We found the following results:
-							<li class="col-12-12 center ae-5 fromCenter">Document 0 (Trump’s Inaugural Speech ??) <span class="opacity-8">Topic 3: National power and activity.</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 1 (??) <span class="opacity-8">Topic 0: Respect the Country</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 2 (??) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 3 ( ??) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 4 (??) <span class="opacity-8">Topic 0: Respect the Country</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 5 ( ??) <span class="opacity-8">Topic 2: People’s Greatness</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 6 ( ??) <span class="opacity-8">Topic 3: National power and activity.</span></li></p>
+							<li class="col-12-12 center ae-5 fromCenter">Document 0 (BOLSONARO - Minister of defence speech) <span class="opacity-8">Topic 3: National power and activity.</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 1 (BOLSONARO - Inaugural Speech) <span class="opacity-8">Topic 0: Respect the Country</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 2 (BOLSONARO - United Nation Speech) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 3 (SALVINI - Senate Speech) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 4 (SALVINI - Piazza Duomo Speech) <span class="opacity-8">Topic 0: Respect the Country</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 5 (TRUMP - Minnsota rally Speech) <span class="opacity-8">Topic 2: People’s Greatness</span></li>
+							<li class="col-12-12 center ae-5 fromCenter">Document 6 (TRUMP - Inaugural Speech) <span class="opacity-8">Topic 3: National power and activity.</span></li></p>
 						<p class="tiny opacity-6">In the last step, by using pyLDAvis from Gensim library we created an interactive representation of every topic with the corresponding words. Check it out below!</p>
 						<h1 class="ae-2 left fromLeft">An Interactive Topic Modelling Representation</h1>
 						<iframe src="assets/topic_modelling.html" class="ifameclass"></iframe>
