--- a/assets/topic_modelling.html
+++ b/assets/topic_modelling.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/bmabey/pyLDAvis/files/ldavis.v1.0.0.css">
+<link rel="stylesheet" type="text/css" href="topic_modelling.css">
 
 
 <div id="ldavis_el2030030658626186961207138382"></div>
