--- a/index.html
+++ b/index.html
@@ -1228,6 +1228,90 @@
 						</ul>
 					</div>
 
+					<!-- TOPIIIICCC -->
+					<div class="fix-12-12 topmargin">
+						<ul class="grid grid-83 noSpaces equal ae-2 fadeIn">
+						<li class="col-6-12 ae-3" style="background: #F5FBFE">
+							<h3>Trump's Inaugural Speech</h3>
+							<div class="price ae-5">TOPIC 0</div>
+							<div class="ae-5">
+								<h6 class="uppercase bold small opacity-4">Dale Chall Score</h6>
+							</div>
+							<div class="margin-top-3 margin-bottom-3 equalElement ae-6">
+								<ul class="p tiny">
+									<li><strong>9-10th Grade</strong></li>
+									<li class="opacity-7">Reading Level</li>
+									<li><strong>17</strong></li>
+									<li class="opacity-7">Average Sentence Length</li>
+									<li><strong>74</strong></li>
+									<li class="opacity-7">Longest Sentence Length</li>
+									<li><strong>619 (out of 1456)</strong></li>
+									<li class="opacity-7">Unique words</li>
+								</ul>
+							</div>
+						</li>
+						<li class="col-6-12 ae-3" style="background: #F5FBFE">
+							<h3>Trump's Minnesota Rally Speech</h3>
+							<div class="price ae-5">TOPIC 1</div>
+							<div class="ae-5">
+								<h6 class="uppercase bold small opacity-4">Dale Chall Score</h6>
+							</div>
+							<div class="margin-top-3 margin-bottom-3 equalElement ae-6">
+								<ul class="p tiny">
+									<li><strong>9-10th Grade</strong></li>
+									<li class="opacity-7">Reading Level</li>
+									<li><strong>11</strong></li>
+									<li class="opacity-7">Average Sentence Length</li>
+									<li><strong>76</strong></li>
+									<li class="opacity-7">Longest Sentence Length</li>
+									<li><strong>2676 (out of 11922)</strong></li>
+									<li class="opacity-7">Unique words</li>
+								</ul>
+							</div>
+						</li>
+						<li class="col-6-12 ae-3" style="background: #F5FBFE">
+							<h3>Salvini's Speech to the Senate</h3>
+							<div class="price ae-5">TOPIC 2</div>
+							<div class="ae-5">
+								<h6 class="uppercase bold small opacity-4">Dale Chall Score</h6>
+							</div>
+							<div class="margin-top-3 margin-bottom-3 equalElement ae-6">
+								<ul class="p tiny">
+									<li><strong>9-10th Grade</strong></li>
+									<li class="opacity-7">Reading Level</li>
+									<li><strong>22</strong></li>
+									<li class="opacity-7">Average Sentence Length</li>
+									<li><strong>184</strong></li>
+									<li class="opacity-7">Longest Sentence Length</li>
+									<li><strong>963 (out of 2922)</strong></li>
+									<li class="opacity-7">Unique words</li>
+								</ul>
+							</div>
+						</li>
+						<li class="col-6-12 ae-3" style="background: #F5FBFE">
+							<h3>Salvini's Piazza Duomo Speech</h3>
+							<div class="price ae-5">TOPIC 3</div>
+							<div class="ae-5">
+								<h6 class="uppercase bold small opacity-4">Dale Chall Score</h6>
+							</div>
+							<div class="margin-top-3 margin-bottom-3 equalElement ae-6">
+								<ul class="p tiny">
+									<li><strong>9-10th Grade</strong></li>
+									<li class="opacity-7">Reading Level</li>
+									<li><strong>29</strong></li>
+									<li class="opacity-7">Average Sentence Length</li>
+									<li><strong>117</strong></li>
+									<li class="opacity-7">Longest Sentence Length</li>
+									<li><strong>1835 (out of 7432)</strong></li>
+									<li class="opacity-7">Unique words</li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+					<p>
+						
+					</p>
+
 					<div class="fix-12-12 toCenter topmargin">
 						<p class="ae-3 fromLeft"><span class="opacity-8">For the topic modelling itself we used an LDA algorithm, by using the <a href=”https://radimrehurek.com/gensim/”>gensim library</a>. We decided to create 4 topics for the whole collection of documents. Each topic is created with unsupervised learning, and is defined by a set of words, each with a weight. We named the four resulting topics as: 0. Respect the country, 1. Work and go vote, 2. People's greatness, and 3. National power and activity.</span></p>
 					</div>
