--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 								<button class="button  gradient ae-4 bfoul"id="foul">Foul</button>
 								<button class="button  gradient ae-4 brelig"id="relig">Religion</button>
 								<button class="button  gradient ae-4 bcores"id="cores">Core Issue</button>
-                
+
 							</div>
 						</li>
 					</ul>
@@ -1309,7 +1309,7 @@
 						</li>
 					</ul>
 					<p>
-						
+
 					</p>
 
 					<div class="fix-12-12 toCenter topmargin">
@@ -1693,14 +1693,14 @@
               <h3>Maria Chiara Frangipane</h3>
               <div class="price ae-5"><img src="assets/img/chiara.jpg" height="150"/></div>
               <div class="ae-5">
-                <h6 class="uppercase bold small opacity-4">Your Title</h6>
+                <h6 class="uppercase bold small opacity-4">Digital Specialist</h6>
               </div>
               <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                 <ul class="p tiny">
-                  <li><strong>Main Area of Interest</strong></li>
-									<li><strong>Main Area of Interest</strong></li>
-                  <li class="opacity-7">Area of Interest</li>
-                  <li class="opacity-7">Area of Interest/li>
+                  <li><strong>Digital Communication</strong></li>
+									<li><strong>Usability and UX</strong></li>
+                  <li class="opacity-7">Web Design</li>
+                  <li class="opacity-7">Information Management</li>
                 </ul>
               </div>
               <a href="https://www.linkedin.com/in/maria-chiara-frangipane-92853b15b/" class="button gradient wide cropSides cropBottom ae-7">LinkedIn</a>
